change theme and add contents

--- a/src/components/projects/game-projects.astro
+++ b/src/components/projects/game-projects.astro
@@ -56,7 +56,7 @@ const getBannerPath = (path: string) => {
   imgAlt="Banner for VR Shooter game playable on Meta Quest Link, developed in Unreal Engine"
   title="VR Shooter Game"
   skillIcons={[getIconPath("other/unreal-engine-icon.webp")]}
-  skillIconAlts={["unreal-engine"]}
+  skillIconAlts={["Unreal Engine"]}
   subTitle="VR shooter playable on Meta Quest Link headset"
   descNum={3}
   desc={["Intense shooting action", "dynamic hand animations", "Recall grabbable objects"]}
@@ -67,7 +67,7 @@ const getBannerPath = (path: string) => {
   imgAlt="Banner for Infinite Scroll game with screen-spinning twists, developed in Unity and C#"
   title="Infinite Scroll Game"
   skillIcons={[getIconPath("other/unity-game-engine-icon.webp"), getIconPath("language/csharp-icon.webp")]}
-  skillIconAlts={["unity-game-engine", "csharp"]}
+  skillIconAlts={["Unity Engine", "C#"]}
   subTitle="Endless game with screen-spinning twists and obstacle dodging"
   descNum={2}
   desc={["Endless gameplay", "Challenging obstacle"]}
@@ -81,7 +81,7 @@ const getBannerPath = (path: string) => {
   imgAlt="Banner for Mouse Accuracy Training game focusing on precision shooting and reaction time, developed in C++"
   title="Mouse Accuracy Training"
   skillIcons={[getIconPath("other/unity-game-engine-icon.webp"), getIconPath("language/csharp-icon.webp")]}
-  skillIconAlts={["unity-game-engine", "csharp"]}
+  skillIconAlts={["Unity Engine", "C#"]}
   subTitle="Mouse training for shooting games"
   descNum={3}
   desc={["Precision shooting drills", "Reaction time test", "or endless gameplay"]}
@@ -96,7 +96,7 @@ const getBannerPath = (path: string) => {
     getIconPath("language/javascript-icon.webp"),
   ]}
   skillIconAlts={[
-    "javascript",
+    "JavaScript",
   ]}
   subTitle="Liar game application developed by JavaScript"
   descNum={1}
