--- a/src/components/projects/web-projects.astro
+++ b/src/components/projects/web-projects.astro
@@ -61,12 +61,12 @@ const getBannerPath = (path: string) => {
     getIconPath("frontend/tailwind-css-icon.webp"),
   ]}
   skillIconAlts={[
-    "oracle",
-    "docker",
-    "shadcn",
-    "nextjs",
-    "typescript",
-    "tailwind",
+    "Oracle",
+    "Docker",
+    "Shadcn UI",
+    "Next.js",
+    "TypeScript",
+    "Tailwind CSS",
   ]}
   subTitle="Docx Template Editor"
   descNum={2}
@@ -87,8 +87,8 @@ const getBannerPath = (path: string) => {
     getIconPath("language/javascript-icon.webp"),
   ]}
   skillIconAlts={[
-    "next.js",
-    "mongoDB",
+    "Next.js",
+    "MongoDB",
     "JavaScript",
   ]}
   subTitle="Competitive bidding platform built for Full-Stack Development course team project"
@@ -96,6 +96,8 @@ const getBannerPath = (path: string) => {
   desc={[
     "An intuitive auction platform built to simplify bidding",
   ]}
+  sourceCodeLink="https://github.com/timdonato/csis3380-final"
   moveLink="https://csis3380-final.netlify.app/"
   accessMethod="website"
+  team
 />
