--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,24 +12,20 @@
     oklch(0.405 0.101 131.063) 50%,
     oklch(0.141 0.005 285.823) 100%
   ); */
-  /* background: white; */
 
-  --background: oklch(0.141 0.005 285.823);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.21 0.006 285.885);
-  --card-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.648 0.2 131.684);
-  --primary-foreground: oklch(0.986 0.031 120.757);
-  --secondary: oklch(0.274 0.006 286.033);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.274 0.006 286.033);
-  --muted-foreground: oklch(0.705 0.015 286.067);
-  --accent: oklch(0.274 0.006 286.033);
-  --accent-foreground: oklch(0.985 0 0);
-  --border: oklch(1 0 0 / 10%);
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.405 0.101 131.063);
-  --sidebar-primary: oklch(0.768 0.233 130.85);
+--background: oklch(0.95 0.002 286.3);
+--foreground: oklch(0.2 0.005 285.823);
+--card: oklch(0.93 0.002 286.3);
+--card-foreground: oklch(0.25 0.005 285.823);
+--primary: oklch(0.6 0.18 131.684);
+--primary-foreground: oklch(0.98 0.01 131.684);
+--secondary: oklch(0.88 0.004 286.32);
+--secondary-foreground: oklch(0.25 0.006 285.885);
+--muted: oklch(0.92 0.002 286.3);
+--muted-foreground: oklch(0.5 0.012 285.9);
+--border: oklch(0.88 0.004 286.32);
+--input: oklch(0.88 0.004 286.32);
+--ring: oklch(0.7 0.2 128.85);
 }
 
 @theme inline {
