--- a/src/layouts/section-container.astro
+++ b/src/layouts/section-container.astro
@@ -10,7 +10,7 @@ const { id, secondary } = Astro.props;
 
 <section
   id={id}
-  class={`md:min-w-3xl section-container text-foreground ${secondary && 'bg-secondary/50'} p-5 md:p-10 w-full max-w-full text-left opacity-0 translate-y-10 transition-all`}
+  class={`md:min-w-3xl section-container text-foreground ${secondary && 'bg-secondary/50'} p-5 md:px-16 md:py-8 w-full max-w-full text-left opacity-0 translate-y-10 transition-all`}
 >
   <slot />
 </section>
