--- a/src/layouts/root-layout.astro
+++ b/src/layouts/root-layout.astro
@@ -8,8 +8,8 @@ import NavBar from '../components/mobile-navbar.astro';
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/henry-portfolio/favicon.svg" />
-		<link rel="icon" href="/henry-portfolio/favicon.ico" />
+		<link rel="icon" type="image/svg+xml" href="/portfolio/favicon.svg" />
+		<link rel="icon" href="/portfolio/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
     	<title>Henry Chung | Software Engineer</title>
 
@@ -33,11 +33,11 @@ import NavBar from '../components/mobile-navbar.astro';
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://henrychung98.github.io/henry-portfolio/"
+      content="https://henrychung98.github.io/portfolio/"
     />
     <meta
       property="og:image"
-      content="https://henrychung98.github.io/henry-portfolio/logo-png.png"
+      content="https://henrychung98.github.io/portfolio/logo-png.png"
     />
     <meta property="og:locale" content="en_US" />
 
@@ -54,7 +54,7 @@ import NavBar from '../components/mobile-navbar.astro';
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Henry Chung",
-        "url": "https://henrychung98.github.io/henry-portfolio/",
+        "url": "https://henrychung98.github.io/portfolio/",
         "jobTitle": "Software Engineer",
         "sameAs": [
           "https://github.com/HenryChung98",
